# math-parser

./: Makefile  README.md  main.py  pyproject.toml  test.py  test1.py
parser/: pyproject.toml
parser/parser/: parser.py
